--- a/homework-4/demo-bug-fix/package.json
+++ b/homework-4/demo-bug-fix/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest"
   },
   "keywords": ["demo", "api", "bug-fixing", "multi-agent"],
   "author": "SPD Tech Training",
@@ -14,6 +15,12 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "jest": "^29.0.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": ["**/tests/**/*.test.js"]
   }
 }
